fix: adjust appointments and chat APIs for client dashboard integration